--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -28,11 +17,55 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.movie-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+}
+.movie-wrapper {
+  width: 20rem;
+  background-color: antiquewhite;
+  color: black;
+}
+
+.movie-search {
+  height: 3rem;
+  font-size: 1.6rem;
+  margin-bottom: 1.7rem;
+  padding: 1rem;
+  font-weight: bold;
+  text-align: center;
+  width: 20rem;
+}
+.movie-image{
+  width: 20rem;
+  max-height: 25rem;
+  object-fit: cover;
+}
+
+.movie-title{
+  margin-top:0.5rem;
+  padding-bottom: 2rem;
+  height: 3rem;
+}
+
+.movie-title h5{
+  font-weight: bold;
+}
+
+
+.movie-date-rate{
+  font-style: italic;
+  padding: 0.5rem 0 0.5rem 0;
+
+}
+
+.movie-rate{
+  color: red;
+  font-weight: bold;
+  text-decoration: underline;
+  font-style: normal;
 }
